src/test/resources/lab2-samples/bad7.out

*** Error line 12.
  betsy = new Cow, true;
                 ^
*** syntax error

