src/test/resources/lab2-samples/bad7.decaf

class Cow extends Animal {
  bool isSpotted;
  bool IsSpottedCow() {
    return isSpotted;
  }
}


void main() {
  Cow betsy;
  betsy = new Cow, true;
  
  betsy.IsSpottedCow(5, break);
}
      


